# Compare-Compression-Methods

./: README.md  run.sh
code/source/: CMakeLists.txt  Point3D_64.cpp  Point3D_64.h  PointUtils.cpp  PointUtils.h  constants.h  create_plots.py  metrics.cpp  orderPoints.cpp
final_output/: Ametrics.txt  Aordered.txt  Bmetrics.txt  README.md
final_output/output/: Bmetrics.txt
output/: Ametrics.txt  Bordered.txt  Cmetrics.txt  Cordered.txt  methodsRanking.txt
